# searcharr-nxg

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  settings-sample.py
.github/workflows/: release.yml
docker/compose/: .env.dev.example  .env.example  docker-compose-dev.yml.example  docker-compose.yml.example
documentation/: Documentation Governance Principles.md  README.md  Reference Survey.md  System Architecture.md
maintainer/: README.md  WORKFLOW.md
maintainer/development/: README.md  dev-build.sh
maintainer/docker/: .dockerignore  Dockerfile  docker-entrypoint.sh
maintainer/release/: README.md  release.sh  update_available_versions.py
maintainer/test/: smoke_local_docker.sh
src/searcharr_nxg/: __init__.py  config.py  http.py  logging_utils.py  main.py  render.py  runtime.py  telegram_bot.py
src/searcharr_nxg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/searcharr_nxg/domain/: __init__.py  decision_model.py
src/searcharr_nxg/integrations/: __init__.py  radarr.py  ryot.py  sonarr.py  tmdb.py
src/searcharr_nxg/services/: __init__.py  movie_actions.py  movie_inspection.py  series_actions.py  series_inspection.py
tests/: test_movie_actions.py  test_movie_inspection.py  test_render.py  test_sonarr_client.py  test_telegram_bot.py  test_tmdb_client.py
