[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searcharr-nxg"
version = "1.0.0"
description = "Ryot-centric Telegram request system for media automation"
authors = [{name = "BrainPonders"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-telegram-bot==13.15",
    "urllib3<2",
    "setuptools<81",
    "PyYAML",
    "arrow",
]

[project.scripts]
searcharr-nxg = "searcharr_nxg.main:main"

[tool.setuptools.packages.find]
where = ["src"]
